@@ -22,7 +22,6 @@ import org.objectweb.asm.Type;
 import org.objectweb.asm.commons.GeneratorAdapter;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 import static io.activej.codegen.util.TypeChecks.checkType;
@@ -63,7 +62,7 @@ public final class ExpressionHashCode implements Expression {
 	}
 
 	public ExpressionHashCode withFields(String... fields) {
-		return withFields(Arrays.asList(fields));
+		return withFields(List.of(fields));
 	}
 
 	@Override
