@@ -199,7 +199,7 @@ public final class ReflectionUtils {
 		for (Method method : cls.getDeclaredMethods()) {
 			if (method.getReturnType() == cls
 					&& Modifier.isStatic(method.getModifiers())) {
-				if (method.isAnnotationPresent(Inject.class)){
+				if (method.isAnnotationPresent(Inject.class)) {
 					injectFactoryMethods.add(method);
 				}
 				factoryMethods.add(method);
@@ -290,7 +290,7 @@ public final class ReflectionUtils {
 	public static <T> BindingInitializer<T> methodInjector(Key<T> container, Method method) {
 		method.setAccessible(true);
 		Key<?>[] dependencies = toDependencies(container.getType(), method);
-		return new BindingInitializer<T>(new HashSet<>(Arrays.asList(dependencies))) {
+		return new BindingInitializer<T>(Set.of(dependencies)) {
 			@Override
 			public CompiledBindingInitializer<T> compile(CompiledBindingLocator compiledBindings) {
 				CompiledBinding[] argBindings = Stream.of(dependencies)
